[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bitflags = "1.3"
bitvec = "0.22.3"
internment = "0.5"
itertools = "0.10"
petgraph = "0.6"
regex = "1.5"

[profile.release]
debug = true
